--- a/buttons.html
+++ b/buttons.html
@@ -48,10 +48,25 @@
             margin-left: 10px;
 
         }
+
+        .sign-button {
+            border:none;
+            background-color: rgb(255, 205, 0);
+            color: black;
+
+            height: 23px;
+            width: 105px;
+            border-radius: 20px;
+            font-size: 10px;
+            cursor: pointer;
+
+        }
     </style>
     <button class="subscribe-button">SUBSCRIBE</button>
     <button class="join-button">JOIN</button>
     <button class="tweet-button">TWEET</button>
+
+    <button class="sign-button">Sign in</button>
     
 </body>
 </html>
