--- a/Learning/text.html
+++ b/Learning/text.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="textstyle.css">
 </head>
 <body>
+    <img class="yt" src="red-youtube-logo-social-media-logo_197792-1803.avif">
+    
     <p class="video-title">Talking tech and AI with Google CEO Sundar Pichai</p>
     <p class="video-stats">
         3.4M views &#183 6months ago
@@ -22,6 +24,8 @@
     <p class="Sundar">
         Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
     </p>
+
+    <img class="apple" src="images.png">
 
     <p class="Apple">
         Shop early for the best selection of holiday favourites. <span class="underline">Shop now &gt</span>
