--- a/Youtube/youtube.html
+++ b/Youtube/youtube.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube_copy</title>
+    <title>Youtube.com Clone</title>
     <link rel="stylesheet" href="youtube.css">
 </head>
 <body>
-    <img  class="firstpic" src="thumbnails/thumbnail-1.webp">
-    <p>New day</p>
+    <img
+    class="firstpic"
+    src="thumbnails/thumbnail-1.webp">
+    
     
 </body>
 </html>
