--- a/Youtube/youtube.html
+++ b/Youtube/youtube.html
@@ -10,6 +10,12 @@
     <img
     class="firstpic"
     src="thumbnails/thumbnail-1.webp">
+
+
+    <input
+    class="searchbox"
+    type="text"
+    placeholder="Search Google or type a URL">
     
     
 </body>
