--- a/Youtube/youtube.html
+++ b/Youtube/youtube.html
@@ -7,15 +7,29 @@
     <link rel="stylesheet" href="youtube.css">
 </head>
 <body>
+
+    <input class="searchbox"
+    type="text"
+    placeholder="Search Google or type a URL">
     <img
-    class="firstpic"
+    class="thumbnail"
     src="thumbnails/thumbnail-1.webp">
 
 
-    <input
-    class="searchbox"
-    type="text"
-    placeholder="Search Google or type a URL">
+
+
+
+    <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+
+    <p class="video-author">
+        Marques Brownlee
+    </p>
+
+    <p class = "video-stats">
+        3.4M views · 6 months ago
+    </p>
     
     
 </body>
