done chnages with css absolute and relative positions

--- a/Youtube/youtube.html
+++ b/Youtube/youtube.html
@@ -35,7 +35,10 @@
 
             <img class="upload-icon" src="header_icons/upload.svg">
             <img class="apps-icon" src="header_icons/youtube-apps.svg">
+            <div class="notify-count">
             <img class="notify-icon" src="header_icons/notifications.svg">
+            <div class="not-count">3</div>
+            </div>
             <img class="profile-icon" src="channel-pic/channels4_profile.jpg">
         </div>
     
